<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragment_notifications"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/menu_notifications" />
    <item
        android:id="@+id/fragment_timetable"
        android:icon="@drawable/ic_baseline_timetable_24"
        android:title="@string/menu_timetable" />
    <item
        android:id="@+id/fragment_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/fragment_assignments"
        android:icon="@drawable/ic_baseline_assignment_24"
        android:title="@string/menu_assignments" />
    <item
        android:id="@+id/fragment_courses"
        android:icon="@drawable/ic_baseline_course_24"
        android:title="@string/menu_courses" />
</menu>